<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="#F7F7F7">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroEmpleadosActivity"
        >

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Registroe"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        /* Contraseña*/

        <EditText
            android:id="@+id/txtCampoPWD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/caja_de_texto_decoracion_larga"
            android:hint="Dígite su clave"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtcampoNusuario"></EditText>

        /* ID*/

        /* Nombre*/

        <EditText
            android:id="@+id/txtcampoIDU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/caja_de_texto_decoracion_larga"
            android:hint="Número de documento"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22"></EditText>

        <EditText
            android:id="@+id/txtcampoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/caja_de_texto_decoracion_larga"
            android:hint="Dígite su nombre"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtcampoIDU"></EditText>

        /* Apellido*/

        <EditText
            android:id="@+id/txtcampoApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/caja_de_texto_decoracion_larga"
            android:hint="Dígite su Apellido"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtcampoNombre"></EditText>

        /* Telefono*/

        <EditText
            android:id="@+id/txtcampotelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/caja_de_texto_decoracion_larga"
            android:hint="Dígite su teléfono"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtcampoApellido"></EditText>

        /* Usuario*/

        <EditText
            android:id="@+id/txtcampoNusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/caja_de_texto_decoracion_larga"
            android:hint="Dígite su Usuario"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtcampotelefono"></EditText>

        /* Submit*/

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="70dp"
            android:background="@drawable/botones_cortos_decoration"
            android:text="@string/regresar"
            app:layout_constraintEnd_toStartOf="@+id/btnRegistrar"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCampoPWD" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/botones_cortos_decoration"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCampoPWD" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>